<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuPlace"
        android:title="lieu" />
    <item
        android:id="@+id/menuDate"
        android:title="date"></item>
    <item
        android:id="@+id/menuAnnulerFiltre"
        android:title="annuler" />
</menu>